# tandem-buddy

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  README.md  app.py  audio_processing.py  docker-compose.yml  language_partner.py  pyproject.toml
tandem_buddy/: audio_processing.py  chat_controller.py  language_partner.py  prompts.py  utils.py
