[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tandem-buddy"
version = "0.1.0"
description = "A buddy to practice speaking in your target language and receive some gentle feedback."
authors = [
    {name = "Anne Valvezan (coffeedrunkpanda)", email = "coffeedrunkpanda.studio@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12" # Specify your minimum Python version

# Core dependencies (equivalent to [tool.poetry.dependencies])
dependencies = [
    "gradio==5.50.0",
    "langchain==1.1.0",
    "langchain-openai==1.1.0",
    "langchain-community==0.4.1",
    "elevenlabs==2.24.0",
    "dotenv",

]

[project.optional-dependencies]
dev = [
    "pytest",       # Testing framework
]

[tool.setuptools]
packages = {find = {exclude = ["temp_data*"]}}